upgraded signlap from verison 4.0 to 5.0

--- a/template/index_depth.html
+++ b/template/index_depth.html
@@ -32,14 +32,14 @@
 	
 	
 	<div class="col-lg-12">
-	  <p><b>Analysis annotation in gff format:</b> <a href="data/master.gff">master.gff</a></p>
+	  <p><b>Analysis annotation in gff format:</b> <a href="data/master.gff.txt">master.gff.txt</a></p>
 	</div>
 	<div class="col-lg-12">
-	  <p><b>Analysis annotation in tbl format:</b> <a href="data/master.tbl">master.tbl</a></p>
+	  <p><b>Analysis annotation in tbl format:</b> <a href="data/master.tbl.txt">master.tbl.txt</a></p>
 	</div>
 	
 	<div class="col-lg-12">
-	  <p><b>Analysis annotation in tab delimited format:</b> <a href="data/master.tsv">master.tsv</a></p>
+	  <p><b>Analysis annotation in tab delimited format:</b> <a href="data/master.tsv.txt">master.tsv.txt</a></p>
 	</div>
       </div>
       
