--- a/template/html/taxon_sunburst_cds.count.html
+++ b/template/html/taxon_sunburst_cds.count.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script type="text/javascript" src="../data/taxon.cds.sunburst.count.json"></script>
+    <script type="text/javascript" src="../data/taxon.cds.profile.sunburst.count.json"></script>
   </head> 
   <body>
     <div id="outform">
@@ -17,8 +17,8 @@
       <nav class="site-header py-0 mb-5">
 	<div class="container d-flex justify-content-end">
 	  <a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	  <a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	  <a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	  
+	  <a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
 	</div>
       </nav>
       <div class="container"> 
