--- a/template/html/taxontable_18SrRNA.html
+++ b/template/html/taxontable_18SrRNA.html
@@ -51,8 +51,8 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
 
@@ -71,7 +71,7 @@
   <div class="col-xs-12 mt-5">
     <!--Footer Bottom-->
     <p class="text-center" >Problems? Questions? Suggestions? Please contact  <a href="mailto:xdong@ucalgary.ca">Xiaoli Dong</a> or <a href="mailto:mstrous@ucalgary.ca">Marc Strous</a></p>
-    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a</p>
+    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a></p>
 																												      </div>
   </footer>
   </div>
