--- a/template/html/foamTable_summary.html
+++ b/template/html/foamTable_summary.html
@@ -14,8 +14,7 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/3.2.6/css/fixedColumns.dataTables.min.css">
   <script type="text/javascript"  src="https://cdn.datatables.net/fixedcolumns/3.2.6/js/dataTables.fixedColumns.min.js"></script>
   
-  <script type="text/javascript" src="../data/cds.foam.datatable.json"></script>
-  <script type="text/javascript" src="../data/cds.foam.tablecol.json"></script>
+  <script type="text/javascript" src="../data/foam.cds.profile.datatable.json"></script>
   <script type="text/javascript" class="init">
     
     $(document).ready(function() {
@@ -53,8 +52,8 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
 
@@ -62,7 +61,7 @@
     <div class="content">
       <h2 style="text-align:center;"><a href="http://cbb.pnnl.gov/portal/software/FOAM.html">FOAM</a> (Functional Ontology Assignments for Metagenomes) database annotation summary</h2>
       
-      <table id="genetable" class="stripe row-border order-column" cellspacing="0" width="100%">
+      <table id="genetable" class="stripe row-border order-column  cell-border" style="width: 100%; word-wrap:break-word;table-layout: fixed;">
 	<thead>
 	 
 	</thead>
@@ -77,7 +76,7 @@
   <div class="col-xs-12 mt-5">
     <!--Footer Bottom-->
     <p class="text-center" >Problems? Questions? Suggestions? Please contact  <a href="mailto:xdong@ucalgary.ca">Xiaoli Dong</a> or <a href="mailto:mstrous@ucalgary.ca">Marc Strous</a></p>
-    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a</p>
+    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a></p>
 																												      </div>
 </footer>
 </div>
