--- a/template/html/foamtree_cds.html
+++ b/template/html/foamtree_cds.html
@@ -14,8 +14,8 @@
    
      <script src="https://rawgit.com/adamjimenez/jstree-table/master/jstreetable.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/style.min.css" />
-    <script type="text/javascript" src="../data/cds.foam.tree.json"></script>
-    <script type="text/javascript" src="../data/cds.foam.treecol.json "></script>
+    <script type="text/javascript" src="../data/foam.cds.profile.tree.json"></script>
+    <script type="text/javascript" src="../data/foam.cds.treecol.json "></script>
     <script>
       
       $(document).ready(function(){
@@ -53,8 +53,8 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
 
