--- a/template/html/rRNATable.html
+++ b/template/html/rRNATable.html
@@ -3,11 +3,11 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>16SrRNA Gene Table</title>
+  <title>rRNA Gene Table</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="../style.css">
-  <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script type="text/javascript"  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -24,14 +24,14 @@
     scrollCollapse: true,
     "aaData": data,
     "columns": [
-    { "data": "ID" },
-    { "data": "feature" },
-    { "data": "seqname" },
+    { "data": "geneid" },
+    { "data": "contigid" },
     { "data": "start" },
     { "data": "end" },
-    { "data": "len" },
+    { "data": "genelen" },
     { "data": "strand" },
-    { "data": "rRNA_taxon"}
+    { "data": "feature" },
+    { "data": "taxon"}
     ]
     } );
     
@@ -49,23 +49,23 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
  
     <div class="content">
      <h2 style="text-align:center;">rRNA Gene Table</h2>
-     <table id="genetable" class="stripe row-border order-column" cellspacing="0" width="100%">
+     <table id="genetable" class="stripe row-border order-column cell-border" style="width: 100%;" >
 	<thead>
 	  <tr>
-	    <th>Gene</th>
-	    <th>Locus Type</th>
+	    <th>Gene ID</th>
 	    <th>Contig</th>
 	    <th>Start</th>
 	    <th>End</th>
 	    <th>Length</th>
 	    <th>Strand</th>
+	    <th>Feature</th>
 	    <th>Taxonomy</th>
 	  </tr>
 	</thead>
@@ -77,7 +77,7 @@
   <div class="col-xs-12 mt-5">
     <!--Footer Bottom-->
     <p class="text-center" >Problems? Questions? Suggestions? Please contact  <a href="mailto:xdong@ucalgary.ca">Xiaoli Dong</a> or <a href="mailto:mstrous@ucalgary.ca">Marc Strous</a></p>
-    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a</p>
+    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a></p>
 																												      </div>
 </footer>
 </div>
