--- a/template/index.html
+++ b/template/index.html
@@ -226,20 +226,20 @@ coding genes overlapping with detected non-coding features, MetaErg masks these 
 	   <tr>
 	     <td>SSU rRNA</td>
 	     
-	     <td><a href="data/taxon.ssu.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_ssurRNA.html">table</a>, <a href="html/taxontree_ssurRNA.html">tree</a>, <a href="html/taxon_sunburst_ssurRNA.count.html">gene copy sunburst</a>, <a href="html/taxon_sunburst_ssurRNA.abd.html">gene abundance sunburst</a> views</td>
+	     <td><a href="data/taxon.ssu.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_ssurRNA.html">table</a>, <a href="html/taxontree_ssurRNA.html">tree</a>, <a href="html/taxon_sunburst_ssurRNA.count.html">gene count sunburst</a>, <a href="html/taxon_sunburst_ssurRNA.abd.html">gene abundance sunburst</a> views</td>
 	   </tr>
 	   
 	   <tr>
 	     <td>LSU rRNA</td>
 	     
-	     <td><a href="data/taxon.lsu.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_lsurRNA.html">table</a>, <a href="html/taxontree_lsurRNA.html">tree</a>, <a href="html/taxon_sunburst_lsurRNA.count.html">gene copy sunburst</a>, <a href="html/taxon_sunburst_lsurRNA.abd.html">gene abundance sunburst</a> views</td>
+	     <td><a href="data/taxon.lsu.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_lsurRNA.html">table</a>, <a href="html/taxontree_lsurRNA.html">tree</a>, <a href="html/taxon_sunburst_lsurRNA.count.html">gene count sunburst</a>, <a href="html/taxon_sunburst_lsurRNA.abd.html">gene abundance sunburst</a> views</td>
 	   </tr>
 	   
 	   
 	   <tr>
 	     <td>CDs</td>
 	     
-	     <td><a href="data/taxon.cds.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_cds.html">table</a>, <a href="html/taxontree_cds.html">tree</a>, <a href="html/taxon_sunburst_cds.count.html">gene copy sunburst</a>, <a href="html/taxon_sunburst_cds.abd.html">gene abundance sunburst</a>views</td>
+	     <td><a href="data/taxon.cds.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/taxontable_cds.html">table</a>, <a href="html/taxontree_cds.html">tree</a>, <a href="html/taxon_sunburst_cds.count.html">gene count sunburst</a>, <a href="html/taxon_sunburst_cds.abd.html">gene abundance sunburst</a>views</td>
 	   </tr>
 	 </tbody>
        </table>
@@ -273,7 +273,7 @@ coding genes overlapping with detected non-coding features, MetaErg masks these 
                 <td>Metabolic-hmm</br>
 		(Metaboic marker gene for specific pathways)
 		</td>
-                <td><a href="data/metabolic.cds.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/protein_family_metabolic.html">table</a>, <a href="html/protein_family_metabolic_tree.html">tree</a>, <a href="html/protein_family_metabolic_sunburst_count.html">gene copy sunburst</a>, <a href="html/protein_family_metabolic_sunburst_abd.html">gene abundance sunburst</a> views
+                <td><a href="data/metabolic.cds.profile.tab.txt">Tabular profile</a>, and interactive <a href="html/protein_family_metabolic.html">table</a>, <a href="html/protein_family_metabolic_tree.html">tree</a>, <a href="html/protein_family_metabolic_sunburst_count.html">gene count sunburst</a>, <a href="html/protein_family_metabolic_sunburst_abd.html">gene abundance sunburst</a> views
 		</td>
               </tr>
 	      <tr>
